--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,19 @@
-# 服务器端口号
+ # 服务器端口号
 server:
   port: 9190
 
 # 数据源
 spring:
+  profiles:
+    active: dev
+
   datasource:
-    url: jdbc:mysql://localhost:3306/permission?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://bj-cdb-73ejfibu.sql.tencentcdb.com:60900/product?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: root
+    password: Zhang123456song$
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
 
 mybatis:
-  mapper-locations: classpath:mybatis/mapper/*Mapper.xml
+  mapper-locations: classpath:mybatis/mapper/*.xml
+
