--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,14 @@
- # ·þÎñÆ÷¶Ë¿ÚºÅ
+ # ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ë¿Úºï¿½
 server:
   port: 9190
+  servlet:
+    context-path: /prot
 
-# Êý¾ÝÔ´
+# ï¿½ï¿½ï¿½ï¿½Ô´
 spring:
   profiles:
     active: dev
+
 
   datasource:
     url: jdbc:mysql://bj-cdb-73ejfibu.sql.tencentcdb.com:60900/product?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
