--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,8 @@
         <!-- MyBatis分页依赖 -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>5.1.10</version>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.5</version>
         </dependency>
 
         <!-- HuTools工具包 -->
